Remove outdated Lunar Client JVM flags from documentation and improve clarity in setup instructions Bringed back nametag smoothing